# solana-pokemon-game

./: .env.mainnet.example  .gitignore  Anchor.toml  Cargo.toml  PLAN.md  PRD.md  README.md  docker-compose.yml  package.json  tsconfig.json
.github/workflows/: build-deploy.yml  ci.yml
api/: package.json
api/src/: index.ts
app/: next.config.js  package.json  tailwind.config.js
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/battle/: page.tsx
app/src/app/breed/: page.tsx
app/src/app/dashboard/: page.tsx
app/src/app/explore/: page.tsx
app/src/app/leaderboard/: page.tsx
app/src/app/marketplace/: page.tsx
app/src/app/staking/: page.tsx
app/src/components/: MonsterCard.tsx  StatsDisplay.tsx
app/src/lib/: constants.ts  program.ts  store.ts
art/: README.md  generate-sprites.ts  species-db.ts
docs/: LAUNCH_RUNBOOK.md
metadata/examples/: 0-emberpup.json
metadata/schema/: monster.schema.json
programs/battle/: Cargo.toml
programs/battle/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/creature/: Cargo.toml
programs/creature/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/marketplace/: Cargo.toml
programs/marketplace/src/: lib.rs
programs/token/: Cargo.toml
programs/token/src/: lib.rs
scripts/: deploy-local.sh  generate-species.ts  init-tokens.js  setup.sh  test-devnet.sh  test-full-devnet.js  upload-arweave.ts
scripts/deploy/: init-mainnet.sh  mainnet.sh
scripts/loadtest/: battles.ts
sdk/: package.json
sdk/src/: index.ts
tests/: AUDIT_CHECKLIST.md  README.md  battle.ts  solmon.ts  token-marketplace.ts
tests/integration/: lifecycle.ts  security.ts
