[package]
name = "solmon-battle"
version = "0.1.0"
description = "SOLMON Battle Program — commit-reveal 3v3 battles"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solmon_battle"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solmon-creature = { path = "../creature", features = ["cpi"] }
