[package]
name = "solmon-creature"
version = "0.1.0"
description = "SOLMON Creature Program — monster management, stats, evolution"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solmon_creature"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
