[package]
name = "solmon-token"
version = "0.1.0"
description = "SOLMON Token Program — $SOLMON + $SOLTREAT SPL tokens"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solmon_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
